# Remove all 'enable-' and 'with-' prefixes, since meson does explicit =true
# https://wiki.gnome.org/Initiatives/GnomeGoals/MesonPorting

option('multiple-slurmd', type: 'boolean', value: false, description: 'enable multiple-slurmd support')
option('static-libslurm', type: 'boolean', value: false, description: 'statically link to libslurm.o instead of the shared libslurm lib; can dramatically increase the footprint of Slurm')
option('rpath-absolute', type: 'boolean', value: false, description: 'If set to true, makes the rpath of executables absolute. This makes it so the executables can move anywhere without needing to move any lib dirs in relation to it. Absolute rpath will be prefix + libdir + `slurm`. By default, rpath is relative, and is set to `$ORIGIN/../` + libdir + `slurm`, where `$ORIGIN` is the location of the executable')
option('contribs', type: 'boolean', value: false, description: 'Build contribs')


# TODO: rpath option?
# option('rpath', type: 'boolean', value: true, description: 'If set to false, disables setting the rpath for executables. Only takes effect if static-libslurm is unspecified')

# Example (from the slurm source directory):
# meson ../meson-build/build -Dmultiple-slurmd=true --werror --prefix=$HOME/slurm/slurm-fork/meson-build

# References
########################3
# https://mesonbuild.com/Build-options.html