# NOTE: Order matters!

# TODO: Figure out what scripts to install in /bin and /sbin
subdir('cray')
subdir('lua')
subdir('mic')
subdir('openlava')
subdir('pam')
subdir('pam_slurm_adopt')
subdir('perlapi')
subdir('pmi')
subdir('pmi2')
subdir('seff')
subdir('sgather')
if netloc_lib.found()
    subdir('sgi')
endif
# subdir('sjobexit')
# subdir('slurm_completion_help')
# subdir('torque')
# subdir('web_apps')
