# NOTE: Order matters!
subdir('common')
subdir('api')
subdir('bcast')
if mysql_libs.found()
    subdir('database')
else
    warning('src/database not being built because mysql_libs are empty')
endif
subdir('db_api')
subdir('plugins')
subdir('slurmctld')
subdir('slurmd')
subdir('slurmdbd')
subdir('sacctmgr')
subdir('srun')
subdir('squeue')
subdir('sinfo')
subdir('salloc')
subdir('sbatch')
subdir('scancel')
subdir('scontrol')
subdir('sacct')
subdir('sstat')
subdir('sattach')
subdir('sbcast')
subdir('sdiag')
subdir('sreport')
subdir('layouts')
subdir('smap')
subdir('sprio')
subdir('sview')
subdir('srun_cr')


# TODO:
# subdir('sshare')
# subdir('strigger')