# NOTE: Order matters!
subdir('common')
subdir('api')
subdir('bcast')
subdir('database')
subdir('slurmd')
subdir('plugins')
subdir('slurmctld')
subdir('slurmdbd')
subdir('sacctmgr')
subdir('srun')
subdir('squeue')
subdir('sinfo')
subdir('salloc')
subdir('sbatch')
subdir('scancel')
subdir('scontrol')
subdir('sacct')
subdir('sstat')
subdir('sattach')
subdir('sbcast')
subdir('sdiag')
subdir('sreport')
subdir('layouts')
subdir('smap')
subdir('sprio')
subdir('sview')
subdir('srun_cr')
subdir('sshare')
subdir('strigger')
