# NOTE: Order matters!
subdir('common')
subdir('api')
subdir('bcast')
subdir('database')
subdir('slurmd')
subdir('plugins')
subdir('slurmctld')
subdir('slurmdbd')
subdir('sacctmgr')
subdir('srun')
subdir('squeue')
subdir('sinfo')
subdir('salloc')
subdir('sbatch')
subdir('scancel')
subdir('scontrol')
subdir('sacct')
subdir('sstat')
subdir('sattach')
subdir('sbcast')
subdir('sdiag')
subdir('sreport')
subdir('layouts')
if build_smap
    subdir('smap')
endif
subdir('sprio')
if gtk_lib.found()
    subdir('sview')
endif
if build_srun_cr
    subdir('srun_cr')
endif
subdir('sshare')
subdir('strigger')
