subdir('crypto')
subdir('select')
subdir('switch')
subdir('preempt')
subdir('checkpoint')
subdir('acct_gather_energy')
subdir('acct_gather_profile')
subdir('acct_gather_interconnect')
subdir('acct_gather_filesystem')
subdir('jobacct_gather')
subdir('ext_sensors')
subdir('accounting_storage')

# TODO:
# subdir('auth')
# subdir('burst_buffer')
# subdir('core_spec')
# subdir('gres')
# subdir('jobcomp')
# subdir('job_container')
# subdir('job_submit')
# subdir('launch')
# subdir('mcs')
# subdir('mpi')
# subdir('node_features')
# subdir('power')
# subdir('priority')
# subdir('proctrack')
# subdir('route')
# subdir('sched')
# subdir('slurmctld')
# subdir('task')
# subdir('topology')