subdir('crypto')
subdir('select')
subdir('switch')
subdir('preempt')
subdir('checkpoint')
subdir('acct_gather_energy')
subdir('acct_gather_profile')
subdir('acct_gather_interconnect')
subdir('acct_gather_filesystem')
subdir('jobacct_gather')
subdir('ext_sensors')
subdir('accounting_storage')
subdir('topology')
subdir('jobcomp')
subdir('sched')
subdir('priority')
subdir('mcs')
subdir('route')
subdir('auth')
subdir('proctrack')
subdir('task')

# TODO:
# subdir('burst_buffer')
# subdir('core_spec')
# subdir('gres')
# subdir('job_container')
# subdir('job_submit')
# subdir('launch')
# subdir('mpi')
# subdir('node_features')
# subdir('power')
# subdir('slurmctld')