subdir('crypto')
subdir('select')
subdir('switch')
subdir('preempt')
subdir('checkpoint')
subdir('acct_gather_energy')
subdir('acct_gather_profile')
subdir('acct_gather_interconnect')
subdir('acct_gather_filesystem')
subdir('jobacct_gather')
subdir('ext_sensors')
subdir('accounting_storage')
subdir('topology')
subdir('jobcomp')
subdir('sched')
subdir('priority')
subdir('mcs')
subdir('route')
subdir('auth')
subdir('proctrack')
subdir('task')
subdir('job_container')
subdir('core_spec')
subdir('launch')
subdir('mpi')
subdir('gres')
subdir('power')
subdir('burst_buffer')
# subdir('job_submit')
# subdir('node_features')
# subdir('slurmctld')
