slurmctld_src = [
    'acct_policy.c',
    'acct_policy.h',
    'agent.c',
    'agent.h',
    'backup.c',
    'burst_buffer.c',
    'burst_buffer.h',
    'controller.c',
    'fed_mgr.c',
    'fed_mgr.h',
    'front_end.c',
    'front_end.h',
    'gang.c',
    'gang.h',
    'groups.c',
    'groups.h',
    'heartbeat.c',
    'heartbeat.h',
    'job_mgr.c',
    'job_scheduler.c',
    'job_scheduler.h',
    'job_submit.c',
    'job_submit.h',
    'licenses.c',
    'licenses.h',
    'locks.c',
    'locks.h',
    'node_mgr.c',
    'node_scheduler.c',
    'node_scheduler.h',
    'partition_mgr.c',
    'ping_nodes.c',
    'ping_nodes.h',
    'port_mgr.c',
    'port_mgr.h',
    'power_save.c',
    'power_save.h',
    'powercapping.c',
    'powercapping.h',
    'preempt.c',
    'preempt.h',
    'proc_req.c',
    'proc_req.h',
    'read_config.c',
    'read_config.h',
    'reservation.c',
    'reservation.h',
    'sched_plugin.c',
    'sched_plugin.h',
    'slurmctld.h',
    'slurmctld_plugstack.c',
    'slurmctld_plugstack.h',
    'srun_comm.c',
    'srun_comm.h',
    'state_save.c',
    'state_save.h',
    'statistics.c',
    'step_mgr.c',
    'trigger_mgr.c',
    'trigger_mgr.h',
]

# Note: Make sure export_dynamic and implib are set, so that plugins can easily
# access slurmctld functions (symbols).
# https://stackoverflow.com/a/17083153 (-Wl,--export-dynamic flag)
# https://mesonbuild.com/Reference-manual.html#shared_module

slurmctld = executable(
    'slurmctld', # executable name
    slurmctld_src, # source files
    include_directories: [slurm_inc],
    dependencies : [pthread_libs, dl_libs],
    link_with: [libcommon, libslurm, libdaemonize],
    install: true,
    install_dir: get_option('sbindir'),
    # Either implib and/or export_dynamic need to be set for plugins to access slurmctld functions
    export_dynamic: true,
    # implib: true,
)
